tests/paczka1/small_fuzzy/34428587.err
Error in line 5: 6HX89mfS A836 36,1
Error in line 15: 6HX89mfS S713 54,31
